crates/xlate/tests/snapshots/golden_matrix__instr_mid_context_system__gpt-4o-mini__20260910__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Say hi."
        }
      ]
    },
    {
      "type": "message",
      "role": "assistant",
      "content": [
        {
          "type": "output_text",
          "text": "Hi.",
          "annotations": []
        }
      ]
    },
    {
      "type": "message",
      "role": "system",
      "content": [
        {
          "type": "input_text",
          "text": "From now on answer in French."
        }
      ]
    },
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "How are you?"
        }
      ]
    }
  ],
  "max_output_tokens": 64
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
